# digital-twin-lab-protocol-simulation

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  run_simulation.py
.github/workflows/: ci.yml
examples/: ngs_library_prep.json  pcr_preparation.json  pcr_with_errors.json
interface/: __init__.py  api.py  cli.py
interpreter/: __init__.py  protocol_interpreter.py
models/: __init__.py  protocol_models.py
simulation/: __init__.py  animation_pipeline.py  blender_engine.py  object_library.py
tests/: __init__.py  test_validation.py
validation/: __init__.py  protocol_validator.py
